--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Digiperform UI built with React and Tailwind CSS"
     />
-    <title>Digiperform UI</title>
+    <title>We Creative</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
